--- a/src/app/components/payments/saved-cards/saved-cards-dialogue.component.css
+++ b/src/app/components/payments/saved-cards/saved-cards-dialogue.component.css
@@ -6,9 +6,7 @@
 .card-button {
   background-color: white;
   border: 2px solid lightgray;
-  /*max-height: 200px; !* Adjust as needed *!*/
   width: 90%;
-  /*margin: auto;*/
   margin-bottom: 10px;
   height: 80px;
   padding: 10px;
@@ -21,13 +19,13 @@
 }
 
 .card-button:hover {
-  background-color: #f5f5f5; /* Add a hover effect */
+  background-color: #f5f5f5;
 }
 
 .card-number {
-  margin-left: 10px; /* Adjust as needed */
+  margin-left: 10px;
 }
 
 .expiration-date {
-  float: right; /* Or adjust positioning as needed */
+  float: right;
 }
